<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="auto_test">Auto Test</string>
    <string name="auto_outtime_test">Back testing is not complete, please manually run</string>
    <string
        name="test_result">Test Result</string>
    <string
        name="ok">OK</string>
    <string
        name="pass">Pass</string>
    <string
        name="fail">Fail</string>
    <string
        name="app_name">FactoryKit Test</string>
    <string
        name="start">Start</string>
    <string
        name="scan">Scan</string>
     <string
             name="user_canceled">User canceled</string>
    <string name="version_info">Version Information</string>
    <string name="software_version">Software version: </string>
    <string name="Hardware_version">Hardware version: </string>
    <string name="Product_version">Product version: </string>
    <string name="build_version">Build version: </string>
    <string
        name="device_open_fail">Device open fail!</string>
    <string
        name="service_get_fail">Sevice get fail!</string>
    <string
        name="sensor_get_fail">Sensor get fail!</string>
    <string
        name="sensor_register_fail">Sensor register fail!</string>
    <string
        name="test_pass">Test pass</string>
    <string
        name="shake_hint">Please cover light sensor with your hands at least 2 times.</string>
    <string
            name="light_sensor_verison">sensor type:
    </string>
    <string name="headset_key">Headset key</string>
    <string
        name="remove_headset">Please remove headset</string>
    <string
            name="remove_headset_second">Please remove headset in %s second</string>
    <string
        name="insert_headset">Please insert headset</string>
    <string
            name="insert_headset_second">Please insert headset in %s second</string>
    <string
        name="stop">Stop</string>
    <string
        name="play">Play</string>
    <string
        name="record">Record</string>
    <string
        name="time_out">Time out!</string>
    <string
        name="error_pass">Please correct test!</string>
    <string
        name="clean_state">Clean Test State</string>
    <string
        name="uninstall">Uninstall</string>
    <string
        name="control_center_quit_confirm">Do you want to exit?</string>
    <string name="refresh_results">Refresh Results</string>
    <string name="master_clear_menu_text">Reset phone</string>
    <string name="test_info_menu_text">Test Results</string>
    <string name="battery_msg">Please insert the charger!</string>
    <string name="battery_insert">Please insert the charger in %s second!</string>
    <string
            name="led_red">red</string>
    <string
            name="led_green">green</string>
    <string
            name="led_blue">blue</string>
    <string
        name="led_red_name">TriColor Led (red)</string>
    <string
            name="led_green_name">TriColor Led (green)</string>
    <string
            name="led_blue_name">TriColor Led (blue)</string>
    <string
        name="led_text">Light color %s test</string>
    <string
        name="flashlight_name">Flashlight</string>
    <string
        name="flashlight_confirm">Is the Flashlight on?</string>
    <string
            name="iris_leds_confirm">Is the two infrared light of the iris camera on?
    </string>
    <string
        name="sim1_name">SIM</string>
    <string
        name="sim2_name">SIM2</string>
    <string
        name="touchpanel_edge_name">TouchPanel Edge</string>
    <string
        name="touchpanel_key_name">TouchPanel Key</string>
    <string
        name="keypad_name">Keypad</string>
    <string
            name="keypad_and_vibrate_name">Keypad and Vibrate
    </string>
    <string
        name="keypad_text">Please press the following keys:</string>
    <string
        name="keypad_volume_up">VOLUME_UP</string>
    <string
        name="keypad_volume_down">VOLUME_DOWN</string>
    <string
            name="keypad_menu">MENU</string>
    <string
            name="keypad_home">HOME</string>
    <string
            name="keypad_back">BACK</string>
    <string
            name="keypad_app_switch">APP_SWITCH</string>
    <string
        name="keypad_focus">FOCUS</string>
    <string
        name="keypad_camera">CAMERA</string>
    <string
            name="keypad_sos">SOS</string>
    <string
            name="keypad_ptt">PTT</string>
    <string
            name="pin12_name">Extended Interface</string>
    <string
        name="cameraback_name">CameraBack</string>
    <string
        name="cameraback_takepicture">Take picture</string>
    <string
        name="cameraback_fail_open">Camera open Fail, please Check Camera Installed Correctly!</string>
    <string
        name="camerafront_name">CameraFront</string>
    <string
        name="camerafront_takepicture">Take picture</string>
    <string
            name="CameraIris_name">CameraIris
    </string>
    <string
        name="lcm_name">LCM</string>
    <string
        name="lcm_confirm">Please choose</string>
    <string
        name="vibrate_name">Vibrator</string>
    <string
        name="vibrate_confirm">Please choose vibration</string>
    <string
        name="vibrate_hint">Vibrating...</string>
    <string
        name="psensor_name">Proximity Sensor</string>
    <string
        name="psensor_hint">Please cover the Psensor (next to LED).</string>
    <string
        name="hallsensor_hint">Please use magnet close to the Hall switch.</string>
    <string
            name="hall_sensor_check">Status : undetected magnet
    </string>
    <string
            name="hall_sensor_check_ok">Status : detected magnet
    </string>
    <string
        name="gsensor_name">Gravity Sensor</string>
    <string
        name="msensor_name">Magnetic Sensor</string>
    <string
        name="battery_detach_name">Battery Detach</string>
    <string
        name="battery_detach_text">Please wait for test finish measurement...</string>
    <string
        name="battery_detach_text_fail">Test Fail. Start Again...</string>
    <string
        name="battery_detach_number_of_test">Done: 0/10</string>
    <string
        name="osensor_name">Oritentation Sensor</string>
    <string
        name="hsensor_name">Pressure Sensor</string>
    <string
        name="gyroscope_name">Gyroscope</string>
    <string
        name="lightsensor_name">LightSensor</string>
    <string
        name="sdcard_name">SD Card</string>
    <string
        name="sdcard_wait">Please wait for reading Sd card...</string>
    <string
        name="sdcard_confirm">Have inserted SD card?</string>
    <string
        name="sdcard_to_remove">Please Remove the SD card</string>
    <string
        name="sdcard_to_insert">Please insert SD card</string>
      <string
           name="cradle_name">Cradle and Ignition</string>
      <string
           name="cradle_done">Continue</string>
       <string
           name="cradle_wait">Please remove the device from the cradle.</string>
       <string
           name="cradle_remove">Please remove the device from the cradle.</string>
       <string
           name="cradle_insert">Please insert the device into the cradle without ignition.</string>
        <string
           name="cradle_ignition_on">Please set the ignition on. </string>
        <string
           name="cradle_when_done">Press continue when done.</string>
        <string-array
            name="cradle_first_action">
            <item>Please remove the device from any charging device in %s second!</item>
            <item>Please power on the cradle, and insert the Device into the cradle in %s second!</item>
            <item>Please change the IGN to on in %s second!</item>
        </string-array>
        <string-array
            name="cradle_second_action">
            <item>Please verify that the device is not in the cradle, and the USB charging is not connected.</item>
            <item>Please verify that the device in the cradle and the cradle is powered.</item>
            <item>Please verify that ignition switch is on.</item>
        </string-array>
    <string name="imei_name">IMEI</string>
    <string
        name="bluetooth_name">Bluetooth</string>
    <string
        name="bluetooth_scan_start">Scaning devices...</string>
    <string
        name="bluetooth_scan_finish">Finish scan</string>
    <string
        name="bluetooth_scan_null">Not found any device</string>
    <string
        name="wifi_name">WiFi</string>
    <string
        name="wifi_text">WiFi test will be completed within 30 seconds, please wait.</string>
    <string
        name="wifi_is_closing">WiFi is closing, please retry after a while.</string>
    <string
        name="wifi_scan_null">Not found any AP!</string>
    <string
        name="wifi_state_unknown1">WiFi state unknown, please retry.</string>
    <string
        name="transmitter_receiver_name">Transmitter and Receiver</string>
    <string
        name="transmitter_receiver_hint">Transmitter and Receiver</string>
    <string
        name="transmitter_receiver_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string
        name="transmitter_receiver_playing">Replaying now, please listen to the receiver.</string>
    <string
        name="transmitter_receiver_confirm">Do you hear the sound?</string>
    <string
        name="transmitter_receiver_record_first">Please click Record button first</string>
    <string
        name="transmitter_receiver_replay_end">Have reached the end.</string>
    <string
        name="transmitter_receiver_to_record">Click Record button to record sound.</string>
    <string
        name="headset_insert_name">Headset Insert</string>
    <string
            name="headset_remove_name">Headset remove</string>
    <string
            name="headset_name">Headset</string>
    <string
        name="headset_hint">Headset</string>
    <string
        name="headset_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string
        name="headset_playing">Replaying now, please listen to the headset.</string>
    <string
        name="headset_confirm">Do you hear the sound?</string>
    <string
        name="headset_record_first">Please click Record button first</string>
    <string
        name="headset_replay_end">Have reached the end.</string>
    <string
        name="headset_to_record">Click Record button to record sound.</string>
    <string
        name="speaker_name">Speaker</string>
    <string
        name="speaker_hint">Speaker</string>
    <string
        name="speaker_confirm">Do you hear the sound?</string>
    <string
            name="left_speaker_confirm">Do you hear the left speaker sound?
    </string>
    <string
            name="right_speaker_confirm">Do you hear the right speaker sound?
    </string>
    <string
        name="speaker_playing">Playing...</string>
    <string
        name="speaker_play_first">Please click Play button first</string>
    <string
        name="speaker_to_play">Click Play button to play sound.</string>
    <string
        name="speaker_recording">Now being recorded, please speak</string>
    <string
        name="gps_name">GPS</string>
    <string
        name="gps_enable_first">Please enable GPS first</string>
    <string
        name="gps_latitude">latitude:</string>
    <string
        name="fm_search">Search</string>
    <string
        name="fm_confirm">Can you hear the sound ?</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="cancel">Cancel</string>
    <string name="retest_button">Retest</string>
    <string name="receiver_hint">Receiver</string>
    <string name="adjustment">adjustment</string>
    <string
            name="adjustment_tip">Please phone in horizontal position before adjustment</string>
    <string name="calibrate">Calibrate</string>
</resources>