<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    android:id="@+id/receiver_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiver_hint" />

    <Button
        android:id="@+id/receiver_fail"
        android:text="@string/fail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="80dip">
    </Button>

    <TextView
            android:id="@+id/receiver_remove_headset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_headset"
            android:textColor="@color/red"/>
</LinearLayout>
