<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:id="@+id/audio_retest"
                android:text="@string/retest_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="80dip"
                android:layout_width="wrap_content"
                android:layout_gravity="right"/>

        <TextView
                android:id="@+id/audio_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium">
        </TextView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fm_confirm">
        </TextView>

        <TextView
                android:id="@+id/mic_receiver_headset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        <Button
                android:id="@+id/audio_fail"
                android:text="@string/no"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="80dip"
                android:layout_width="fill_parent"
                android:layout_weight="1"/>
        <Button
                android:id="@+id/audio_pass"
                android:text="@string/yes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="80dip"
                android:layout_width="fill_parent"
                android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
