<?xml version="1.0" encoding="utf-8"?>
    <!--
        Copyright (c) 2011, QUALCOMM Incorporated.
        All Rights Reserved.
        QUALCOMM Proprietary and Confidential.
        Developed by QRD Engineering team.
    -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/transmitter_receiver_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker_recording"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        />
    <Button
        android:id="@+id/transmitter_receiver_start"
        android:text="@string/record"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </Button>

    <Button
        android:id="@+id/transmitter_receiver_stop"
        android:text="@string/stop"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </Button>
    <com.qrt.factory.activity.VUMeter android:id="@+id/factory_uvMeter"
                                       android:layout_width="match_parent"
                                       android:layout_height="150dip"
                                       android:layout_gravity="center" />

</LinearLayout>
