<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2011, QUALCOMM Incorporated.
    All Rights Reserved.
    QUALCOMM Proprietary and Confidential.
    Developed by QRD Engineering team.
-->
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/keypad_text"
                android:textSize="25dip"/>

        <TextView
                android:id="@+id/headsetkeyText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/headset_key"
                android:gravity="center_horizontal"
                android:layout_margin="5px"
                android:textSize="20dip"/>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="15px">

            <!--<Button-->
            <!--android:id="@+id/pass"-->
            <!--android:text="@string/pass"-->
            <!--android:textSize="30dip"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="80dip"-->
            <!--android:layout_weight="1"-->
            <!--/>-->


            <TextView
                    android:id="@+id/headset_key_insert_headset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_headset"
                    android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        <Button
                android:id="@+id/fail"
                android:text="@string/fail"
                android:textSize="30dip"
                android:layout_width="fill_parent"
                android:layout_height="80dip"
                android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
