<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2011, QUALCOMM Incorporated.
    All Rights Reserved.
    QUALCOMM Proprietary and Confidential.
    Developed by QRD Engineering team.
-->
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:text="@string/psensor_hint"
                android:textSize="20dip"/>

        <TextView
                android:id="@+id/psensor_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dip"/>

        <TextView
                android:id="@+id/psensor_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dip"/>
        
        <TextView
                android:id="@+id/psensor_calibrate_tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:textSize="20dip"/>
        
    </LinearLayout>
    
        

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">

        <Button
                android:id="@+id/psensor_calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:text="@string/calibrate"/>
        <Button
                android:id="@+id/psensor_cancel"
                android:layout_width="fill_parent"
                android:layout_height="80dip"
                android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>
